syntax = "proto3";

package order;

option go_package = "./pkg/pb";

service Order {
  rpc MakeOrder(MakeOrderRequest) returns (MakeOrderResponse) {};
  rpc GetOrders(GetOrderRequest) returns (GetOrderResponse) {};
  rpc EditOrderStatus(EditStatusRequest) returns (EditStatusResponse) {};
}

message MakeOrderRequest{
    int64 user_id = 1;
    int64 address_id = 2;
}

message MakeOrderResponse{
    int64 status = 1;
}

message GetOrderRequest{
    int64 user_id = 1;
}

message GetOrderResponse{
    repeated OrderDetail details = 1;
}

message OrderDetail{
    int64 order_id = 1;
    float amount = 2;
    string order_status = 3;
}

message EditStatusRequest{
    int64 order_id = 1;
    string status = 2;
}

message EditStatusResponse{
    string response = 1;
}